added logging system
